<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/video_content_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.7"
        android:background="@color/video_edit_main_bg_color"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/play_or_pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/video_content_layout"
        app:layout_constraintBottom_toBottomOf="@id/video_content_layout"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:tint="@color/white"
        android:backgroundTint="#00000000"
        android:contentDescription="@string/play_or_pause_button" />
    <TextView
        android:id="@+id/current_time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/play_or_pause_button"
        app:layout_constraintBottom_toBottomOf="@id/play_or_pause_button"
        app:layout_constraintTop_toTopOf="@id/play_or_pause_button"
        android:text="@string/_00_00"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/total_time_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/video_content_layout"
        app:layout_constraintBottom_toBottomOf="@id/play_or_pause_button"
        app:layout_constraintTop_toTopOf="@id/play_or_pause_button"
        android:layout_marginEnd="5dp"
        android:text="@string/_00_00"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/current_time_textView"
        app:layout_constraintTop_toTopOf="@id/current_time_textView"
        app:layout_constraintBottom_toBottomOf="@id/current_time_textView"
        app:layout_constraintEnd_toStartOf="@id/total_time_TextView"
        android:thumbTint="@color/white"
        android:progressTint="@color/purple_200"
        android:progressBackgroundTint="@color/white" />


    <Button
        android:id="@+id/choose_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/video_content_layout"
        app:layout_constraintTop_toBottomOf="@id/video_content_layout"
        android:text="@string/select_image"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/choose_video_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/video_content_layout"
        app:layout_constraintTop_toTopOf="@id/choose_image_button"
        android:text="@string/select_video" />

    <Button
        android:id="@+id/convert_ai_color_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/choose_image_button"
        app:layout_constraintStart_toStartOf="@id/video_content_layout"
        app:layout_constraintEnd_toEndOf="@id/video_content_layout"
        android:text="@string/convert_video"/>
    <Button
        android:id="@+id/export_converted_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/convert_ai_color_button"
        app:layout_constraintStart_toStartOf="@id/video_content_layout"
        app:layout_constraintEnd_toEndOf="@id/video_content_layout"
        android:text="@string/export_video"
        android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>