<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/export_settings_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/frame_rate_radioGroup"
        app:layout_constraintEnd_toEndOf="@id/frame_rate_radioGroup"
        app:layout_constraintBottom_toTopOf="@id/frame_rate_radioGroup"
        android:text="@string/frame_rate"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/resolution_radioGroup"
        app:layout_constraintEnd_toEndOf="@id/resolution_radioGroup"
        app:layout_constraintBottom_toTopOf="@id/resolution_radioGroup"
        android:text="@string/resolution"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <RadioGroup
        android:id="@+id/frame_rate_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/resolution_radioGroup"
        app:layout_constraintBottom_toBottomOf="parent">
        <RadioButton
            android:id="@+id/twenty_four_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="24"
            android:buttonTint="@color/black"/>
        <RadioButton
            android:id="@+id/twenty_five_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25"
            android:buttonTint="@color/black"/>
        <RadioButton
            android:id="@+id/thirty_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:checked="true"
            android:buttonTint="@color/black"/>
        <RadioButton
            android:id="@+id/fifty_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:buttonTint="@color/black"/>
        <RadioButton
            android:id="@+id/sixty_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60"
            android:buttonTint="@color/black"/>
    </RadioGroup>
    <RadioGroup
        android:id="@+id/resolution_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/frame_rate_radioGroup"
        app:layout_constraintTop_toTopOf="@id/frame_rate_radioGroup"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:id="@+id/seven_two_zero_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="720P"
            android:buttonTint="@color/black"/>
        <RadioButton
            android:id="@+id/one_zero_eight_zero_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1080"
            android:checked="true"
            android:buttonTint="@color/black"/>
        <RadioButton
            android:id="@+id/twoK_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2K"
            android:buttonTint="@color/black"/>
        <RadioButton
            android:id="@+id/fourK_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4K"
            android:buttonTint="@color/black"/>
    </RadioGroup>

    <EditText
        android:id="@+id/file_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_rate_radioGroup"
        android:hint="@string/file_name"/>

    <Button
        android:id="@+id/confirm_export_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_name_editText"/>


</androidx.constraintlayout.widget.ConstraintLayout>